fix: remove alternative fonts and fix geometry gaps

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,44 @@
-.address {
-  font-style: normal;
-  font-size: 18px;
-  line-height: 1.4;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: 'Raleway';
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway';
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  font-family: 'Raleway';
+}
+
+button {
   font-family: 'Raleway';
 }
